@@ -870,14 +870,18 @@ class PokerServiceTestCase(PokerServiceTestCaseBase):
         #
         # A regular tournament starts registration now
         #
+        #  Note that we have to set a respawn here by default so that it
+        #  gets created; the default schema doesn't respawn this tourney
+        #  by default.
         cursor = self.db.cursor()
-        cursor.execute("UPDATE tourneys_schedule SET register_time = UNIX_TIMESTAMP(NOW() + INTERVAL 1 SECOND) WHERE name = 'regular1'")
+        cursor.execute("UPDATE tourneys_schedule SET respawn = 'y', register_time = UNIX_TIMESTAMP(NOW() + INTERVAL 1 SECOND) WHERE name = 'regular1'")
         self.assertEqual(1, cursor.rowcount)
         cursor.close()
 
         self.service.startService()
         d = defer.Deferred()
         def checkTourneys(status):
+            t = self.service.tourneys.values()[0]
             self.failUnless(filter(lambda tourney: tourney.sit_n_go == 'n', self.service.tourneys.values()))
             self.failUnless(filter(lambda tourney: tourney.name == 'regular1', self.service.tourneys.values()))
         d.addCallback(checkTourneys)
@@ -2032,7 +2036,7 @@ class UpdatePlayerRakeTestCase(PokerServiceTestCaseBase):
 # ----------------------------------------------------------------
 def Run():
     loader = runner.TestLoader()
-#    loader.methodPrefix = "test11"
+#    loader.methodPrefix = "test13"
     suite = loader.suiteFactory()
     suite.addTest(loader.loadClass(PokerServiceTestCase))
     suite.addTest(loader.loadClass(RefillTestCase))
