@@ -1,3 +1,9 @@
+2008-09-16  Bradley M. Kuhn  <bkuhn@ebb.org>
+
+	* tests/test-pokerservice.py.in
+	(PokerServiceTestCase.test13_checkTourneysSchedule_spawn_regular):
+	Added update to set respawn to 'y' for 'regular1' tourney.
+
 2008-09-15  Bradley M. Kuhn  <bkuhn@ebb.org>
 
 	* pokernetwork/pokerservice.py (PokerService.tourneyDestroyGame):
